--- a/mymap.html
+++ b/mymap.html
@@ -1,4 +1,4 @@
-<html>
+AAPK24b0674aff7746a197b2ad03a6f1d5a0xOyVu5dkp5xxjSbxtj9G4y1CZLQ2Co5SjQH-298qvp2h-ePoT6ZkAGlT4Bgdzmb8<html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -25,7 +25,7 @@
 
     ], function(esriConfig,Map, MapView, Graphic, GraphicsLayer) {
 
-  esriConfig.apiKey = "AAPK57616c75bec745b981a36a742c56b96dGHe726AnjOQMT-e4PGawNoUXMW-n05b3mU8tE77CzeHIE0WIPNe3pfiOVI7VF04X";
+  esriConfig.apiKey = "AAPK24b0674aff7746a197b2ad03a6f1d5a0xOyVu5dkp5xxjSbxtj9G4y1CZLQ2Co5SjQH-298qvp2h-ePoT6ZkAGlT4Bgdzmb8";
 
   const map = new Map({
     basemap: "arcgis/topographic" // basemap styles service
