--- a/mymap.html
+++ b/mymap.html
@@ -1,4 +1,4 @@
-AAPK24b0674aff7746a197b2ad03a6f1d5a0xOyVu5dkp5xxjSbxtj9G4y1CZLQ2Co5SjQH-298qvp2h-ePoT6ZkAGlT4Bgdzmb8<html>
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
